# SearchEngine

./: CMakeLists.txt  ConverterJSON.h
Executable/: CMakeLists.txt  main.cpp
Executable/DebugBuild/: requests.json
Executable/DebugBuild/txt example/: new 3.txt
Executable/ReleaseBuild/: answers.json  config.json
Test/: CMakeLists.txt  test_main.cpp
